--- a/templates/partials/breadcrumbs.html.twig
+++ b/templates/partials/breadcrumbs.html.twig
@@ -3,7 +3,7 @@
 {% if crumbs|length > 1 or config.plugins.breadcrumbs.show_all %}
 	<div class="breadcrumbs">
 	{% for crumb in crumbs %}
-		<a href="{{ crumb.url }}"> {{ crumb.menu }} </a><i class="mdi-navigation-chevron-right"></i>
+		<a href="{{ crumb.url }}"> {{ crumb.menu }} </a><i class="mdi mdi-chevron-right"></i>
 	{% endfor %}
 	</div>
 {% endif %}
