--- a/css-compiled/theme.css
+++ b/css-compiled/theme.css
@@ -1,11 +1,13 @@
 h4 {
   font-size: 1.75rem; }
 
-a:hover {
-  color: #ee6e73; }
+a {
+  color: #FF5722; }
+  a:hover {
+    color: #03A9F4; }
 
 a.btn {
-  vertical-align: top; }
+  vertical-align: middle; }
   a.btn:hover {
     color: black; }
 
@@ -16,8 +18,18 @@ a.btn {
   .tags a :hover {
     color: black; }
 
+.logo {
+  margin-top: 6px;
+  height: 52px;
+  width: 52px; }
+  .logo path {
+    fill: white; }
+
 .navbar-fixed nav {
   overflow: visible; }
+
+nav {
+  background-color: #0288D1; }
 
 .nav-wrapper a:hover {
   color: black; }
@@ -32,6 +44,8 @@ li.disabled {
   .tags a :hover {
     color: black; }
 
+span.tags {
+  float: right; }
 span .badge {
   float: none;
   padding: 4px 6px 4px 6px; }
@@ -40,12 +54,12 @@ span.badge.new::after {
   content: ""; }
 
 .footer-copyright .container a {
-  color: black; }
+  font-weight: 500; }
   .footer-copyright .container a:hover {
     color: white; }
 
 .header {
-  background-color: #ee6e73;
+  background-color: #03A9F4;
   text-align: center; }
   .header h1 {
     margin-top: 0;
@@ -67,19 +81,22 @@ span.badge.new::after {
   .breadcrumbs a {
     vertical-align: top; }
 
-.list-blog-date {
-  float: right;
-  text-align: center; }
-  .list-blog-date span {
-    display: block;
-    font-size: 1.75rem;
-    font-weight: 400;
-    line-height: 110%; }
-  .list-blog-date em {
-    display: block;
-    border-top: 1px solid #ee6e73;
-    font-style: normal;
-    text-transform: uppercase; }
+.btn {
+  padding-top: 0.1rem;
+  background-color: #03A9F4; }
+  .btn:hover {
+    background-color: #B3E5FC; }
+
+.btn span {
+  position: relative;
+  top: -0.15rem; }
+
+.btn i, .btn-large i, .btn-floating i, .btn-large i, .btn-flat i {
+  font-size: 1.3rem;
+  line-height: inherit; }
+
+span.badge.new {
+  background-color: #03A9F4; }
 
 .list-blog-header {
   position: relative; }
@@ -88,11 +105,14 @@ span.badge.new::after {
   .list-blog-header img {
     display: block;
     margin-top: 1rem;
-    border-radius: 0.25rem; }
+    border-radius: 0.25rem;
+    clear: both; }
 
 .pagination {
   text-align: center;
   display: inline-block; }
+  .pagination li.active {
+    background-color: #FF5722; }
 
 .previous {
   float: right; }
@@ -116,22 +136,40 @@ span.badge.new::after {
     font-size: 1.5rem; }
 
 .modular .callout h2 {
-  margin-top: 0; }
+  margin-top: 0.5em; }
 
-.modular .feature-items {
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto; }
+.modular .features .feature {
+  vertical-align: top; }
+
+.features.big .feature-content {
+  padding-right: 2rem; }
+  .features.big .feature-content.push {
+    margin-left: 4rem; }
 
 .features.big .feature {
-  width: 50%;
-  float: left; }
+  margin: 2rem 0; }
+  .features.big .feature h4 {
+    text-align: left;
+    margin: 0; }
+  .features.big .feature i {
+    float: left;
+    font-size: 3rem;
+    color: #FF5722; }
 
 .features.small .feature {
-  width: 25%;
-  float: left; }
+  margin-top: 2rem; }
   .features.small .feature h4 {
     font-size: 1.125rem; }
+  .features.small .feature i {
+    font-size: 3rem;
+    color: #FF5722; }
+
+.features.small .feature-content h4 {
+  margin-top: 0; }
+
+.feature-content p {
+  text-align: left;
+  margin: 0; }
 
 .callout {
   background: #F0F0F0;
@@ -140,8 +178,18 @@ span.badge.new::after {
     float: right;
     margin-left: 1rem; }
 
+footer.page-footer {
+  background-color: #03A9F4; }
+
+.centered {
+  display: block;
+  margin: 0 auto; }
+
 @media only screen and (min-width: 993px) {
   .container {
     width: 90%; } }
+@media only screen and (max-width: 992px) {
+  .logo {
+    margin-top: 18px; } }
 
 /*# sourceMappingURL=theme.css.map */
