--- a/templates/modular/features.html.twig
+++ b/templates/modular/features.html.twig
@@ -1,11 +1,15 @@
 <div class="modular-row features {{ page.header.class}}">
 	<div class="container center">
 		{{ content }}
-		<div class="feature-items">
+		<div class="feature-items row">
 			{% for feature in page.header.features %}
-				<div class="feature">
+				{% if page.header.class == "big" %}
+					<div class="feature col s12 m6 l6">
+				{% else %}
+					<div class="feature col s6 l3">
+				{% endif %}
 					{% if feature.icon %}
-						<i class="fa fa-fw fa-{{ feature.icon }}"></i>
+						<i class="mdi mdi-{{ feature.icon }}"></i>
 						<div class="feature-content push">
 					{% else %}
 						<div class="feature-content">
@@ -24,5 +28,7 @@
 		</div>
 	</div>
 
-	<div style="clear:both"></div>
+	<div style="clear:both">
+
+	</div>
 </div>
