--- a/templates/partials/blog_item.html.twig
+++ b/templates/partials/blog_item.html.twig
@@ -1,20 +1,21 @@
 <div class="list-item">
 
 	<div class="list-blog-header">
-		<span class="list-blog-date">
-			<span>{{ page.date|date("d") }}</span>
-			<em>{{ page.date|date("M") }}</em>
-		</span>
+
 		{% if page.header.link %}
 			<h4>
 				{% if page.header.continue_link is not sameas(false) %}
-					<a href="{{ page.url }}"><i class="mdi-hardware-keyboard-tab"></i></a>
+					<a href="{{ page.url }}"><i class="mdi mdi-share"></i></a>
 				{% endif %}
 				<a href="{{ page.header.link }}">{{ page.title }}</a>
 			</h4>
 		{% else %}
 			<h4><a href="{{ page.url }}">{{ page.title }}</a></h4>
 		{% endif %}
+
+		<span class="list-blog-date">
+			<i class="mdi mdi-calendar"></i> {{ page.date|date("F") }} {{ page.date|date("d") }}, {{ page.date|date("Y") }}
+		</span>
 
 		{% if page.taxonomy.tag %}
 			<span class="tags">
