--- a/css-compiled/theme.css
+++ b/css-compiled/theme.css
@@ -33,6 +33,13 @@ nav {
 
 .nav-wrapper a:hover {
   color: black; }
+.nav-wrapper a i {
+  position: relative;
+  font-size: 1.3rem;
+  right: -0.05em; }
+.nav-wrapper a span {
+  position: relative;
+  top: -0.15em; }
 
 li.disabled {
   color: rgba(50, 50, 50, 0.2); }
@@ -191,5 +198,11 @@ footer.page-footer {
 @media only screen and (max-width: 992px) {
   .logo {
     margin-top: 18px; } }
+/*@media only screen and (min-width: 601px) {
+	nav a, nav a i {
+		height: 64px;
+		line-height: 64px;
+	}
+}*/
 
 /*# sourceMappingURL=theme.css.map */
