--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -62,6 +62,15 @@ nav {
 	&:hover {
 		color: black;
 	}
+	i {
+		position: relative;
+		font-size: 1.3rem;
+		right: -0.05em;
+	}
+	span {
+		position: relative;
+		top: -0.15em;
+	}
 }
 
 li.disabled {
@@ -276,3 +285,9 @@ footer.page-footer {
 	}
 }
 
+/*@media only screen and (min-width: 601px) {
+	nav a, nav a i {
+		height: 64px;
+		line-height: 64px;
+	}
+}*/
