--- a/templates/partials/navigation.html.twig
+++ b/templates/partials/navigation.html.twig
@@ -39,8 +39,12 @@
 				{% for mitem in site.menu %}
 					<li>
 						<a href="{{ mitem.url }}">
-							{% if mitem.icon %}<i class="mdi mdi-{{ mitem.icon }}"></i>{% endif %}
-							{% if mitem.text %}<span>{{ mitem.text }}</span>{% endif %}
+							{% if mitem.icon %}
+								<i class="mdi mdi-{{ mitem.icon }}"></i>
+								<span>{{ mitem.text }}</span>
+							{% else %}
+								{{ mitem.text }}
+							{% endif %}
 						</a>
 					</li>
 				{% endfor %}
@@ -56,7 +60,7 @@
 					<li>
 						<a href="{{ mitem.url }}">
 							{% if mitem.icon %}<i class="mdi mdi-{{ mitem.icon }}"></i>{% endif %}
-							{% if mitem.text %}<span>{{ mitem.text }}</span>{% endif %}
+							{{ mitem.text }}
 						</a>
 					</li>
 				{% endfor %}
