Fixed next/previous buttons
The text had not been inside a <span> and so was not properly vertically aligned when an icon is present.

--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -148,10 +148,10 @@ span.badge.new::after {
 	top: -0.15rem;
 }
 
-.btn i, .btn-large i, .btn-floating i, .btn-large i, .btn-flat i {
-	font-size: 1.3rem;
-	line-height: inherit;
-}
+//.btn i, .btn-large i, .btn-floating i, .btn-large i, .btn-flat i {
+//	font-size: 1.3rem;
+//	line-height: inherit;
+//}
 
 span.badge.new {
 	background-color: $localPrimaryColor;
