--- a/templates/partials/blog_item.html.twig
+++ b/templates/partials/blog_item.html.twig
@@ -5,7 +5,7 @@
 		{% if page.header.link %}
 			<h4>
 				{% if page.header.continue_link is not sameas(false) %}
-					<a href="{{ page.url }}"><i class="mdi mdi-share"></i></a>
+					<a href="{{ page.url }}"><i class="mdi mdi-chevron-double-right"></i></a>
 				{% endif %}
 				<a href="{{ page.header.link }}">{{ page.title }}</a>
 			</h4>
