--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -73,6 +73,10 @@ nav {
 	}
 }
 
+nav .nav-wrapper .mdi {
+	display: inline-block;
+}
+
 li.disabled {
 	color: rgba(50, 50, 50, 0.2);
 }
@@ -92,6 +96,8 @@ span {
 	}
 	.badge {
 		float: none;
+		position: relative;
+		right: 0;
 		padding: 4px 6px 4px 6px;
 	}
 }
@@ -138,6 +144,7 @@ span.badge.new::after {
 .btn {
 	padding-top: 0.1rem;
 	background-color: $localPrimaryColor;
+	margin-bottom: 1rem;
 	&:hover {
 		background-color: $localLightPrimaryColor;
 	}
