Fix Image Width Overflow
Grav 0.9.23 added an ALT parameter to Twig media calls that I didn't send.

--- a/templates/partials/blog_item.html.twig
+++ b/templates/partials/blog_item.html.twig
@@ -26,9 +26,9 @@
 		{% endif %}
 
 		{% if big_header %}
-			{{ page.media.images|first.cropResize(900,600).html('', 'responsive-img blog-header-image') }}
+			{{ page.media.images|first.cropResize(900,600).html('', '', 'responsive-img blog-header-image') }}
 		{% else %}
-			{{ page.media.images|first.cropZoom(900,300).html('','responsive-img blog-header-image') }}
+			{{ page.media.images|first.cropZoom(900,300).html('', '', 'responsive-img blog-header-image') }}
 		{% endif %}
 	</div>
 
