--- a/templates/partials/navigation.html.twig
+++ b/templates/partials/navigation.html.twig
@@ -59,7 +59,9 @@
 				{% for mitem in site.menu %}
 					<li>
 						<a href="{{ mitem.url }}">
-							{% if mitem.icon %}<i class="mdi mdi-{{ mitem.icon }}"></i>{% endif %}
+							{% if mitem.icon %}
+								<i class="mdi mdi-{{ mitem.icon }}"></i>
+							{% endif %}
 							{{ mitem.text }}
 						</a>
 					</li>
