Working to fix MaterializeCSS display inconsistencies
Made lists within accordion panels left align with the paragraph text
Added <h6> markup to accordion titles to start getting long titles to wrap

--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -285,15 +285,12 @@ footer.page-footer {
 	}
 }
 
-//@media only screen and (max-width: 992px) {
-//	.logo {
-//		margin-top: 18px;
-//	}
-//}
+.collapsible-header {
+	//display: inline-table;
+}
 
-/*@media only screen and (min-width: 601px) {
-	nav a, nav a i {
-		height: 64px;
-		line-height: 64px;
+.collapsible-body {
+	ul {
+		padding-left: 2em;
 	}
-}*/
+}
