--- a/css-compiled/theme.css
+++ b/css-compiled/theme.css
@@ -194,10 +194,6 @@ footer.page-footer {
   .container {
     width: 90%; } }
 
-/*@media only screen and (min-width: 601px) {
-	nav a, nav a i {
-		height: 64px;
-		line-height: 64px;
-	}
-}*/
+.collapsible-body ul {
+  padding-left: 2em; }
 /*# sourceMappingURL=theme.css.map */
