--- a/templates/accordions.html.twig
+++ b/templates/accordions.html.twig
@@ -16,11 +16,14 @@
 				<div class="col s12 m8 l8 blog-main">
 					<ul class="collapsible popout" data-collapsible="accordion">
 						<li>
-							<div class="collapsible-header"><i class="mdi mdi-image-filter-drama"></i>First</div>
+							<div class="collapsible-header">
+								<h5><i class="mdi mdi-image-filter-drama"></i></h5>
+								<h5>First</h5>
+							</div>
 							<div class="collapsible-body">
 								<p><strong>Activity-Centered Design</strong><br>
-									A specific form of user-centered design where the focus is on user activities and tasks
-									rather than user characteristics.</p>
+									A specific form of user-centered design where the focus is on user activities and tasks rather than user characteristics.
+								</p>
 								<ul>
 									<li><a href="http://bokardo.com/archives/activity-centered-design/" target="_blank"
 											rel="nofollow" class="external-link no-image">Activity-Centered Design - Bokardo</a>
@@ -35,7 +38,8 @@
 
 								<p><strong>Agile UX</strong><br>
 									A variation of the Agile methodology, which supports a more collaborative approach to
-									various user experience design methods. </p>
+									various user experience design methods.
+								</p>
 								<ul>
 									<li><a
 											href="http://www.uxmatters.com/mt/archives/2012/04/agile-user-experience-design.php"
@@ -52,18 +56,29 @@
 									<li><a href="http://uxmag.com/articles/ux-and-agile-tying-the-knot" target="_blank"
 											rel="nofollow" class="external-link no-image">UX and Agile: Tying the knot</a></li>
 								</ul>
+								<p><strong>Activity-Centered Design</strong><br>
+									A specific form of user-centered design where the focus is on user activities and tasks
+									rather than user characteristics.
+								</p>
+								<p>A specific form of user-centered design where the focus is on user activities and tasks
+									rather than user characteristics.
+								</p>
 							</div>
 						</li>
 						<li>
 							<div class="collapsible-header">
-								<h6><i class="mdi mdi-map-marker"></i>This is a title for an accordion section that is really, really long and that causes wrapping problems.</h6>
+								<h5><i class="mdi mdi-map-marker"></i></h5>
+								<h5>This is a title for an accordion section that is really, really long and that causes wrapping problems.</h5>
 							</div>
 							<div class="collapsible-body">
 								<p>And this is the content of the body.</p>
 							</div>
 						</li>
 						<li>
-							<div class="collapsible-header"><i class="mdi mdi-loupe"></i>Third</div>
+							<div class="collapsible-header">
+								<h5><i class="mdi mdi-loupe"></i></h5>
+								<h5>Third</h5>
+							</div>
 							<div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
 						</li>
 					</ul>
