--- a/templates/components.html.twig
+++ b/templates/components.html.twig
@@ -82,6 +82,11 @@
 							<div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
 						</li>
 					</ul>
+
+					<div class="video-container">
+						<iframe width="1280" height="720" src="https://www.youtube.com/embed/VH26lrd6LSY?rel=0&showinfo=0"
+							frameborder="0" allowfullscreen></iframe>
+					</div>
 				</div>
 
 				<div class="col s0 m4 l4 blog-sidebar">
