--- a/templates/components.html.twig
+++ b/templates/components.html.twig
@@ -21,47 +21,26 @@
 								<h5>First</h5>
 							</div>
 							<div class="collapsible-body">
-								<p><strong>Activity-Centered Design</strong><br>
-									A specific form of user-centered design where the focus is on user activities and tasks rather than user characteristics.
-								</p>
+								<h6>Activity-Centered Design</h6>
+								<p>A specific form of user-centered design where the focus is on user activities and tasks rather than user characteristics.</p>
 								<ul>
-									<li><a href="http://bokardo.com/archives/activity-centered-design/" target="_blank"
-											rel="nofollow" class="external-link no-image">Activity-Centered Design - Bokardo</a>
+									<li><a href="http://bokardo.com/archives/activity-centered-design/" target="_blank" rel="nofollow" class="external-link no-image">Activity-Centered Design - Bokardo</a>
 									</li>
-									<li><a href="http://www.uie.com/articles/designing_web_applications_for_use/"
-											target="_blank" rel="nofollow" class="external-link no-image">Designing Web
-											Applications for Use</a></li>
-									<li><a href="http://www.peachpit.com/guides/content.aspx?g=webdesign&amp;seqNum=352"
-											target="_blank" rel="nofollow" class="external-link no-image">Redefining
-											User-Centered Design, Part 1</a></li>
+									<li><a href="http://www.uie.com/articles/designing_web_applications_for_use/" target="_blank" rel="nofollow" class="external-link no-image">Designing Web Applications for Use</a></li>
+									<li><a href="http://www.peachpit.com/guides/content.aspx?g=webdesign&amp;seqNum=352" target="_blank" rel="nofollow" class="external-link no-image">Redefining User-Centered Design, Part 1</a></li>
 								</ul>
 
-								<p><strong>Agile UX</strong><br>
-									A variation of the Agile methodology, which supports a more collaborative approach to
-									various user experience design methods.
-								</p>
+								<h6>Agile UX</h6>
+								<p>A variation of the Agile methodology, which supports a more collaborative approach to various user experience design methods.</p>
 								<ul>
-									<li><a
-											href="http://www.uxmatters.com/mt/archives/2012/04/agile-user-experience-design.php"
-											target="_blank" rel="nofollow" class="external-link no-image">Agile User Experience
-											Design</a></li>
-									<li><a
-											href="http://boxesandarrows.com/bringing-user-centered-design-to-the-agile-environment/"
-											target="_blank" rel="nofollow" class="external-link no-image">Bringing User Centered
-											Design to the Agile Environment</a></li>
-									<li><a
-											href="http://uxdesign.smashingmagazine.com/2012/11/06/design-spikes-fit-big-picture-ux-agile-development/"
-											target="_blank" rel="nofollow" class="external-link no-image">Fitting Big-Picture UX
-											Into Agile Development</a></li>
-									<li><a href="http://uxmag.com/articles/ux-and-agile-tying-the-knot" target="_blank"
-											rel="nofollow" class="external-link no-image">UX and Agile: Tying the knot</a></li>
+									<li><a href="http://www.uxmatters.com/mt/archives/2012/04/agile-user-experience-design.php" target="_blank" rel="nofollow" class="external-link no-image">Agile User Experience Design</a></li>
+									<li><a href="http://boxesandarrows.com/bringing-user-centered-design-to-the-agile-environment/" target="_blank" rel="nofollow" class="external-link no-image">Bringing User Centered Design to the Agile Environment</a></li>
+									<li><a href="http://uxdesign.smashingmagazine.com/2012/11/06/design-spikes-fit-big-picture-ux-agile-development/" target="_blank" rel="nofollow" class="external-link no-image">Fitting Big-Picture UX Into Agile Development</a></li>
+									<li><a href="http://uxmag.com/articles/ux-and-agile-tying-the-knot" target="_blank" rel="nofollow" class="external-link no-image">UX and Agile: Tying the knot</a></li>
 								</ul>
-								<p><strong>Activity-Centered Design</strong><br>
-									A specific form of user-centered design where the focus is on user activities and tasks
-									rather than user characteristics.
-								</p>
-								<p>A specific form of user-centered design where the focus is on user activities and tasks
-									rather than user characteristics.
+								<h6>Activity-Centered Design</h6>
+								<p>A specific form of user-centered design where the focus is on user activities and tasks rather than user characteristics.</p>
+								<p>A specific form of user-centered design where the focus is on user activities and tasks rather than user characteristics.
 								</p>
 							</div>
 						</li>
