--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -13,7 +13,7 @@
 {% if config.plugins.random.enabled %}
 	<div class="sidebar-content">
 		<h4>Random Article</h4>
-		<a class="btn waves-effect waves-light" href="{{ base_url_relative }}/random"><i class="mdi mdi-repeat"></i><span> I'm Feeling Lucky!</span></a>
+		<a class="btn waves-effect waves-light" href="{{ base_url_relative }}/random"><i class="mdi mdi-repeat left"></i> I'm Feeling Lucky!</a>
 	</div>
 {% endif %}
 
